# telemuze

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  composer.py  listener.py  load_models.py  main.py  requirements.txt  run.sh
.cargo/: config.toml
.github/workflows/: ci.yml  publish.yml  release.yml
client/: Cargo.toml
client/.cargo/: config.toml
client/assets/: dictating_lg.rgba  gen_icons.py  idle.rgba  idle_lg.rgba  listening.rgba  listening_lg.rgba  processing.rgba  processing_lg.rgba  recording.rgba  recording_lg.rgba  recording_processing.rgba  recording_processing_lg.rgba  sleeping.rgba  sleeping_lg.rgba
client/src/: cmd.rs  config.rs  eou.rs  kws.rs  lib.rs  main.rs  tray.rs
client/src/tray/: sni.rs  x11.rs
composer/: Dockerfile  composer.py
diarize/: Cargo.toml
diarize/src/: main.rs
docs/: sortformer_parity.md
examples/: command_detect.rs  sortformer_bench.rs  speculative_decode.rs  two_pass_detect.rs
listener/: Dockerfile  requirements.txt
listener/zinit/: listener.yaml
scripts/: build-dist.sh  docker-test.sh  export_onnx.py  export_parakeet_eou.py  export_parakeet_unified.py  fix_metadata_and_quantize.py  quantize_model.py  reset-model-atimes.sh  smart_dictation_client.sh  sortformer_der.py  sortformer_diag_ref.py  sortformer_diff_preds.py  start-bot-api.sh  upload_parakeet_110m_int8.py  upload_parakeet_unified.py  upload_sortformer_diar.py
src/: audio.rs  config.rs  hotwords.rs  long_form.rs  main.rs  models.rs  state.rs  telegram.rs  worker.rs
src/endpoints/: dictate.rs  long_form.rs  mod.rs  transcriptions.rs  web_ui.html  web_ui.rs
src/engines/: diarization.rs  dictionary.rs  llm.rs  long_form.rs  mod.rs  sortformer.rs  stt.rs  vad.rs
zinit/: bot-api.yaml  cache-warmer.yaml  extract-deps.yaml  listener.yaml
