[workspace]
members = [".", "dist"]
resolver = "2"

[package]
name = "telemuze"
version = "0.1.0"
edition = "2021"
description = "Self-hosted AI dictation and transcription server"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Audio pipeline — uses ffmpeg subprocess (must be installed on host)

# STT + VAD engine (sherpa-onnx: Parakeet TDT + Silero VAD)
sherpa-onnx = { version = "1.12", default-features = false }

# Phonetic dictionary pipeline
rphonetic = "3"
strsim = "0.11"

# LLM engine — native inference via llama.cpp, or HTTP to external API
llama-cpp-2 = "0.1"
encoding_rs = "0.8"
reqwest = { version = "0.12", features = ["json", "stream"] }

# Model downloading
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
tempfile = "3"
dirs-next = "2"
bytes = "1"

# Telegram bot (MTProto)
grammers-client = "0.9"
grammers-session = "0.9"

# Audio capture (for examples)
cpal = { version = "0.16", optional = true }
ctrlc = { version = "3.4", optional = true }
libc = "0.2"

[features]
default = ["shared"]
shared = ["sherpa-onnx/shared"]
static = ["sherpa-onnx/static"]
mic = ["cpal", "ctrlc"]

[[example]]
name = "speculative_decode"
required-features = ["mic"]

[[example]]
name = "command_detect"
required-features = ["mic"]

[[example]]
name = "two_pass_detect"
required-features = ["mic"]
