[workspace]
members = [".", "dist", "diarize"]
resolver = "2"

[patch.crates-io]
# Upstream fix for a stray `dbg!` call in grammers-mtsender. Drop this patch
# once a release past commit be66b6e lands on crates.io. All grammers-*
# crates must be patched together so they share a single version.
grammers-client = { git = "https://codeberg.org/Lonami/grammers.git", rev = "be66b6e" }
grammers-session = { git = "https://codeberg.org/Lonami/grammers.git", rev = "be66b6e" }
grammers-mtsender = { git = "https://codeberg.org/Lonami/grammers.git", rev = "be66b6e" }
grammers-mtproto = { git = "https://codeberg.org/Lonami/grammers.git", rev = "be66b6e" }
grammers-tl-types = { git = "https://codeberg.org/Lonami/grammers.git", rev = "be66b6e" }
grammers-crypto = { git = "https://codeberg.org/Lonami/grammers.git", rev = "be66b6e" }

[package]
name = "telemuze"
version = "0.1.0"
edition = "2021"
description = "Self-hosted AI dictation and transcription server"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
socket2 = "0.5"

# Audio pipeline — uses ffmpeg subprocess (must be installed on host)

# STT + VAD engine (sherpa-onnx: Parakeet TDT + Silero VAD + Sortformer).
# Git dep on our fork: gives us the Sortformer diarization bindings and a
# matching prebuilt release whose archives sherpa-onnx-sys auto-downloads
# from GitHub during the build.
sherpa-onnx = { git = "https://github.com/scottyeager/sherpa-onnx", tag = "v1.12.37-sortformer1", default-features = false }

# Phonetic dictionary pipeline
rphonetic = "3"
strsim = "0.11"

# LLM engine — native inference via llama.cpp, or HTTP to external API
llama-cpp-2 = "0.1"
encoding_rs = "0.8"
reqwest = { version = "0.12", features = ["json", "stream"] }

# Model downloading
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
tempfile = "3"
dirs-next = "2"
bytes = "1"

# Telegram bot (MTProto)
grammers-client = "0.9"
grammers-session = "0.9"

# Audio capture (for examples)
cpal = { version = "0.16", optional = true }
ctrlc = { version = "3.4", optional = true }
libc = "0.2"

[features]
default = ["shared"]
shared = ["sherpa-onnx/shared"]
static = ["sherpa-onnx/static"]
mic = ["cpal", "ctrlc"]

[[example]]
name = "speculative_decode"
required-features = ["mic"]

[[example]]
name = "command_detect"
required-features = ["mic"]

[[example]]
name = "two_pass_detect"
required-features = ["mic"]
