[workspace]

[package]
name = "telemuze-listen"
version = "0.1.0"
edition = "2021"
description = "Streaming transcription client for Telemuze"

[lib]
name = "telemuze_listen"
path = "src/lib.rs"

[[bin]]
name = "telemuze-listen"
path = "src/main.rs"

[[bin]]
name = "streaming-test"
path = "src/bin/streaming_test.rs"

[[bin]]
name = "eou-test"
path = "src/bin/eou_test.rs"

[dependencies]
# Audio capture
cpal = "0.15"

# VAD engine (sherpa-onnx Silero VAD, static linking).
# Uses the same fork as the server; sherpa-onnx-sys auto-downloads the
# prebuilt static-lib archive from the fork's GitHub release.
sherpa-onnx = { git = "https://github.com/scottyeager/sherpa-onnx", tag = "v1.12.37-sortformer1", default-features = false, features = ["static"] }

# HTTP client for sending audio to server
reqwest = { version = "0.12", features = ["blocking", "multipart", "json"] }

# WAV encoding
hound = "3"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Signal handling
signal-hook = "0.3"

# System tray: XEmbed on X11, StatusNotifierItem on Wayland.
x11rb = { version = "0.13", features = ["allow-unsafe-code"] }
ksni = { version = "0.3", features = ["blocking"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Model archive extraction
tar = "0.4"
bzip2 = "0.5"

# Utilities
anyhow = "1"
dirs-next = "2"
