[package]
name = "telemuze-diarize"
version = "0.1.0"
edition = "2021"
description = "On-demand speaker diarization subprocess for telemuze (NVIDIA Sortformer)"

[[bin]]
name = "telemuze-diarize"
path = "src/main.rs"

[dependencies]
parakeet-rs = { version = "0.3", default-features = false, features = ["sortformer", "ort-defaults"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
